// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDetails renders the user's username and rating rounded to 2 decimal places 1`] = `
<MenuItem
  className="ant-menu-item"
  disabled={true}
>
  <Div
    className="d-flex"
  >
    <Text
      className="my-auto me-auto"
      ellipsis={true}
    >
      username
    </Text>
    <Text
      className="my-auto ms-auto"
      strong={true}
    >
      <Div
        className="d-flex"
      >
        4.32
        <Icon
          className="my-auto align-middle"
          type="star"
        />
      </Div>
    </Text>
  </Div>
</MenuItem>
`;

exports[`UserDetails renders the user's username only, if no rating is available 1`] = `
<MenuItem
  className="ant-menu-item"
  disabled={true}
>
  <Div
    className="d-flex"
  >
    <Text
      className="my-auto me-auto"
      ellipsis={true}
    >
      username
    </Text>
  </Div>
</MenuItem>
`;
